--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "kings league",
+  "name": "kings-league",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cheerio": "1.0.0-rc.12",
+    "fetch": "^1.1.0",
+    "node-fetch": "^3.3.0"
+  },
+  "devDependencies": {
+    "standard": "^17.0.0"
+  },
+  "eslintConfig": {
+    "extend": "standard"
+    }
 }
