--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev:api": "wrangler dev api/index.js",
+    "publish:api": "wrangler publish api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,12 +15,15 @@
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
     "fetch": "^1.1.0",
+    "hono": "3.0.0",
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
-    "standard": "^17.0.0"
+    "standard": "^17.0.0",
+    "vitest": "^0.28.5",
+    "wrangler": "2.10.0"
   },
   "eslintConfig": {
     "extend": "standard"
-    }
+  }
 }
